--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,6 @@
 
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap'); */
 
 /*Paleta
 Rojo #FE6D73 Blanco #F1FAEE Celeste #A8DADC Azul #457B9D Azul oscuro #1D3557
@@ -15,21 +14,36 @@ Rojo #FE6D73 Blanco #F1FAEE Celeste #A8DADC Azul #457B9D Azul oscuro #1D3557
     box-sizing: border-box;
 }
 
-html{font-size: 20px;
+body{
+    font-size:20px;
+    font-family:'Montserrat', sans-serif;
+    color: rgba(0, 0, 0, 0.668);
+    background-color: #F1FAEE;
+} 
+
+/*html{
+    font-size: 20px;
     font-family: 'Montserrat', sans-serif;
     color: rgba(0, 0, 0, 0.668);
     background-color: #F1FAEE;
-    
-}
+}*/
 
 a{
     text-decoration: none;
     color: #F1FAEE;
 }
 
+p{
+    margin-bottom:0rem;
+}
+
+ol, ul{
+    padding-left:0rem;
+}
+
 .titulo-paginas{
     margin-bottom:20px;
-    font-size: 2rem;
+    font-size: 40px;
     font-weight: 600;
     letter-spacing: 2px;
     text-align: center;
@@ -37,13 +51,9 @@ a{
 }
 
 nav{
+    height:90px;
     padding: 10px;
-    margin: 0px 20px;
-    border-radius: 10px;   
-    background-color:#f1faee86;
-    display:flex;
-    justify-content: space-evenly;
-    align-items: center;
+    background-color:#f1faeed1;
 }
 
 /*Imágenes de deptos*/
@@ -60,21 +70,38 @@ main section article img{
 .ulnav{
     text-transform:uppercase;
     text-decoration: none;
-    display:flex;
-    flex-wrap: wrap;
 }
 
 
 /*Elementos lista Navegador*/
-.linav{
+/* .linav{
     padding: 0em 4em;
     font-size: 16px;
     border-radius: 5px; 
     list-style: none;
+} */
+
+/* .linav-a{
+    color:#457B9D; 
+} */
+
+.navbar-nav{
+    width:90%;
+    justify-content:space-evenly;
 }
 
-.linav-a{
-    color:#457B9D; 
+.nav-link{
+    color:#457B9D;
+    text-transform:uppercase;
+    font-size: 18px;
+}
+
+.nav-link:focus, .nav-link:hover{
+    color:#1D3557;
+}
+
+.navbar-nav .nav-link.active, .navbar-nav .show > .nav-link{
+    color:#457B9D;
 }
 
 
@@ -82,16 +109,16 @@ main section article img{
 .navheaderback{
     padding-top: 5px;
     width: 100%;
-    height: 290px;
+    height: 300px;
     background-image: url("../assets/backgrounds/seyfettin-dincturk-3hnVKdWveT4-unsplash.jpg");
     background-size:cover;
-    background-position: center -130px;
+    background-position: center -100px;
 }
 
 
 /*BEM Header*/
 .contenedorHeader{
-    margin-top: 20px;
+    margin-top: 120px;
     background-color:rgba(0, 0, 0, 0.199);;
     height:120px;
     color:#F1FAEE;
@@ -116,7 +143,7 @@ main section article img{
 /*Footer*/
 footer{
     background-color: #1D3557;
-    height:8rem;
+    height:12rem;
     display: flex;
     justify-content:space-around;
     align-items: center;
@@ -130,6 +157,7 @@ footer{
     }
 
 .footer-iconos{
+    color:#656566;
     list-style: none;
     display:flex;
     justify-content: space-evenly;
@@ -139,17 +167,42 @@ footer{
 /*Estilos específicos*/
 
 /*Contenedor del Main en Index*/
-.container-mainIndex{
-    margin:20px;    
+.contenedor-mainIndex{
+    margin-top:30px;    
+    margin-bottom:30px;
     display:flex;
     flex-direction: column;
     justify-content: center; 
     align-items: center;       
 }
 
+.form-select{
+    color:#FE6D73;
+}
+
+.form-control::placeholder{
+    color:#FE6D73;
+}
+
+.form-text{
+    font-size:0.7em;
+}
+
+.btn-primary{
+    --bs-btn-color:#F1FAEE;
+    --bs-btn-bg:#1D3557;
+    --bs-btn-border-color:#A8DADC;
+    --bs-btn-hover-color: #F1FAEE;
+    --bs-btn-hover-bg: #457B9D;
+    --bs-btn-hover-border-color: #FE6D73;
+}
+
+.col-2{
+    text-align:center;
+}
 
 /*Buscador Reservas Index*/
-.cajabuscador{
+/* .cajabuscador{
     margin-bottom:10px;
     padding: 15px;
     width: 75%;
@@ -158,6 +211,7 @@ footer{
     color:#F1FAEE ;
     background-color: #FE6D73;
 }
+
 
 .flex-fieldset{
     display:flex;
@@ -196,12 +250,12 @@ footer{
 .boton--nuevo{
     margin-bottom:10px;
     /*background-color: #F1FAEE;*/
-    color:grey;
+    /* color:grey;
     background-image: linear-gradient(to left,#F1FAEE,#A8DADC);
     font-weight:bold;
     text-transform: uppercase;
     letter-spacing: 2px;
-}
+} */ 
 
 
 /*Grid*/
@@ -271,7 +325,7 @@ footer{
 }
 
 /*Contenedor Main Servicios*/
-.container-mainServicios{ 
+.contenedor-mainServicios{ 
     margin-top:20px;
     display:flex;
     flex-direction: column;
@@ -342,7 +396,7 @@ list-style-image: url("../assets/icons/Brisas_bullet.png");
 
 
 /*Contenedor Main Servicios*/
-.container-mainPisos{ 
+.contenedor-mainPisos{ 
     margin-top:20px;
     display:flex;
     flex-direction: column;
@@ -357,7 +411,7 @@ list-style-image: url("../assets/icons/Brisas_bullet.png");
 }
 
 
-.container-mainLive{ 
+.contenedor-mainLive{ 
     margin:20px;
     display:flex;
     flex-direction: column;
@@ -425,8 +479,8 @@ grid-area: baires;
 }
 
 /*Contacto*/
-.container-mainContacto{ 
-    margin:50px;
+.contenedor-mainContacto{ 
+    margin:20px;
     display:flex;
     flex-direction: column;
 }
@@ -439,6 +493,15 @@ grid-area: baires;
     color:#F1FAEE;
     text-shadow: 1px 1.5px black;
     border-radius:10px;
+}
+
+button, input, optgroup, select, textarea{
+    font-size:80%;
+}
+
+legend{
+    float:none;
+    width:auto;
 }
 
 
@@ -569,7 +632,7 @@ grid-area: baires;
 
     /*Livecam*/
 
-    .container-mainLive{
+    .contenedor-mainLive{
         margin:0px;
     }
 
