--- a/css/estilos.css
+++ b/css/estilos.css
@@ -53,6 +53,7 @@ main section article img{
     margin-right: 10px;
     margin-left: 10px;
     border-radius:5px;
+    box-shadow:3px 5px 5px gray;
 }
 
 /*Estilos Nav Bootstrap*/
@@ -160,6 +161,7 @@ footer{
     font-size:0.7em;
 }
 
+/*Modificación animación bootstrap*/
 .btn-primary{
     --bs-btn-color:#F1FAEE;
     --bs-btn-bg:#1D3557;
@@ -214,8 +216,40 @@ footer{
     font-weight:bold;
     background-image: linear-gradient(to left,#457B9D ,#1D3557,#457B9D);
     text-decoration:none;
+    transition: 0.1s;
 }
 
+.boton-img:hover{
+    background-image: linear-gradient(to left,#1D3557,#457B9D,#1D3557);
+    transform:translate(0, px);
+    box-shadow:3px 5px 5px gray;
+}
+
+.boton-img a:hover{
+    color:#FE6D73; 
+}
+
+.contenedor-imagen div{
+    transition: 1.5s;
+    backface-visibility: hidden;
+}
+
+.contenedor-imagen .frente{
+    position:absolute;
+    transform: perspective(600px) rotateY(0deg);
+}
+
+.contenedor-imagen .dorso{
+    transform: perspective(600px) rotateY(180deg);
+}
+
+.contenedor-imagen:hover .frente{
+    transform: perspective(600px) rotateY(180deg);
+}
+
+.contenedor-imagen:hover .dorso{
+    transform: perspective(600px) rotateY(360deg);
+}
 
 /*Textos de img en Main Index y Pisos*/
 .font-destacados{
@@ -269,6 +303,7 @@ footer{
     margin-top: 10px; 
     margin-bottom: 10px;
     border-radius: 10px;
+    box-shadow:3px 5px 5px gray;
 }
 
 .contenedorlista__item{
@@ -293,39 +328,121 @@ list-style-image: url("../assets/icons/Brisas_bullet.png");
 
 /*Botón Contacto Servicios*/
 .contactserv{
-    width:250px;
+    position: relative; 
+    width: 250px;
     margin: 40px;
     padding: 10px;
-    align-self:center;
-    border: solid thin 10px;
-    border-radius: 20px;
+    align-self: center;
+    border-radius: 10px;
     font-size: 15px;
     letter-spacing: 2px;
     text-transform: uppercase;
     font-weight: bold;
     background-image: linear-gradient(to left,#457B9D ,#1D3557,#457B9D); 
+    transition: .5s;
+    overflow: hidden;
+}
+
+.contactserv:hover{
+    background-image: linear-gradient(to left,#1D3557,#457B9D,#1D3557);
+    box-shadow: 3px 5px 5px gray;
+}
+
+.contactserv a:hover{
+    color: #A8DADC;
 }
 
 
+.contactserv span{
+    position: absolute;
+    background: #FE6D73;
+    transition: .5s;
+}
+
+.contactserv span:nth-child(1){
+    width: 100%;
+    height: 2px;
+    top: 0;
+    left: -100%;
+}
+
+.contactserv span:nth-child(2){
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    right:-100%;
+}
+
+.contactserv:hover span:nth-child(1){
+    left: 0;
+}
+
+.contactserv:hover span:nth-child(2){
+    right: 0;
+}
+
 /*Contenedor Main Servicios*/
 .contenedor-mainPisos{ 
-    margin-top:20px;
-    display:flex;
+    margin-top: 20px;
+    display: flex;
     flex-direction: column;
 }
 
 /*Flexbox Pisos en Venta*/
 .flex-pisosventa{
-    margin:40px;
-    display:flex;
+    margin: 40px;
+    display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
 }
 
+.contenedor-hoverdeptos{
+    position: relative;
+    height: 326px;
+    width: 500px;
+    margin-top: 10px;
+    margin-right: 10px;
+    margin-left: 10px;
+    border-radius: 5px;
+    box-shadow: 3px 5px 5px gray;
+    overflow: hidden;
+}
+
+.hoverdeptos_img{
+    margin-top: 0px;
+    margin-right: 0px;
+    margin-left: 0px;
+}
+
+.contenedor-hoverdeptos__overlay{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0.6);
+    color: #F1FAEE;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    backdrop-filter: blur(2px);
+    transition: .5s;
+}
+
+.contenedor-hoverdeptos__overlay:hover{
+    opacity: 1;
+    cursor: pointer;
+}
+
+
+.contenedor-hoverdeptos__texto{
+    font-size: 40px;
+}
 
 .contenedor-mainLive{ 
-    margin:20px;
-    display:flex;
+    margin: 20px;
+    display: flex;
     flex-direction: column;
 }
 
@@ -338,8 +455,8 @@ list-style-image: url("../assets/icons/Brisas_bullet.png");
 
 
 .grid-contenedoresLive{
-    margin:50px;
-    display:grid;
+    margin: 50px;
+    display: grid;
     grid-template-areas: 
     "madrid baires"
     "bannerhoriz bannerhoriz"
@@ -348,7 +465,7 @@ list-style-image: url("../assets/icons/Brisas_bullet.png");
 }
 
 .grid-madrid{
-    grid-area:madrid;
+    grid-area: madrid;
 }
 
 .grid-baires{
@@ -356,38 +473,39 @@ grid-area: baires;
 }
 
 .grid-bannerHoriz{
-    grid-area:bannerhoriz;
-    justify-self:center;
+    grid-area: bannerhoriz;
+    justify-self: center;
 }
 
 .grid-bannerVertical{
-    display:none;
+    display: none;
 }
 
 /*Caja Livecam*/
 .contenedorLive{
-    display:flex;
+    display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 .contenedorLive__titulo{
-    margin-bottom:20px;
+    margin-bottom: 20px;
     font-size: 30px;
     font-family: 'Ubuntu', sans-serif;
     text-transform: uppercase;
 }
 
 .contenedorLive__iframe{
-    width:560px; 
-    height:315px;
+    width: 560px; 
+    height: 315px;
     border-radius: 20px;
+    box-shadow: 3px 5px 5px gray;
 }
 
 /*Contacto*/
 .contenedor-mainContacto{ 
-    margin:50px;
-    display:flex;
+    margin: 50px;
+    display: flex;
     flex-direction: column;
 }
 
@@ -398,13 +516,14 @@ grid-area: baires;
     background-position: center;
     color:#F1FAEE;
     text-shadow: 1px 1.5px black;
-    border-radius:10px;
+    border-radius: 10px;
 }
 
 /*Correcciones fuente boostrap en Contacto*/
 button, input, optgroup, select, textarea{
     font-size:80%;
 }
+
 /*Corrección legend bootstrap en Contacto*/
 legend{
     float:none;
@@ -466,7 +585,7 @@ legend{
 }
 
 .botoncontacto{
-    /*margin:1rem 0rem 1rem 10rem;*/
+    width: 100px;
     padding: 5px;
     font-weight: bold;
     font-size: 14px;
@@ -477,13 +596,16 @@ legend{
     border-radius: 10px;
 }
 
-/*Media queries*/
+.botoncontacto:hover{
+    background-color: #f1faee87;
+    color: #1D3557;
+}
 
+
+/*Media queries*/
 @media only screen and (max-width:576px){
 
     /*Estilos generales*/
-
-
     .navheaderback{
         height: 250px;
         background-position:top;
@@ -499,7 +621,6 @@ legend{
     }
 
     /*Index*/
-
     .flex-fieldset{
         flex-direction:column;
     }
@@ -520,7 +641,6 @@ legend{
     }
 
     /*Servicios*/
-
     .contenedorlista__item{
         text-align:center;
     }
