--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,23 +6,28 @@ Rojo #FE6D73 Blanco #F1FAEE Celeste #A8DADC Azul #457B9D Azul oscuro #1D3557
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 body {
   font-size: 20px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: rgba(0, 0, 0, 0.668);
-  background-color: #F1FAEE; }
+  background-color: #F1FAEE;
+}
 
 a {
   text-decoration: none;
-  color: #F1FAEE; }
+  color: #F1FAEE;
+}
 
 p {
-  margin-bottom: 0rem; }
+  margin-bottom: 0rem;
+}
 
 ol, ul {
-  padding-left: 0rem; }
+  padding-left: 0rem;
+}
 
 .titulo-paginas {
   margin-bottom: 20px;
@@ -30,11 +35,13 @@ ol, ul {
   font-weight: 600;
   letter-spacing: 2px;
   text-align: center;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+}
 
 nav {
   padding: 10px;
-  background-color: #f1faeed1; }
+  background-color: rgba(241, 250, 238, 0.8196078431);
+}
 
 /*Imágenes de deptos*/
 main section article img {
@@ -44,23 +51,28 @@ main section article img {
   margin-right: 10px;
   margin-left: 10px;
   border-radius: 5px;
-  box-shadow: 3px 5px 5px gray; }
+  box-shadow: 3px 5px 5px gray;
+}
 
 /*Estilos Nav Bootstrap*/
 .navbar-nav {
   width: 90%;
-  justify-content: space-evenly; }
+  justify-content: space-evenly;
+}
 
 .nav-link {
   color: #457B9D;
   text-transform: uppercase;
-  font-size: 18px; }
+  font-size: 18px;
+}
 
 .nav-link:focus, .nav-link:hover {
-  color: #1D3557; }
+  color: #1D3557;
+}
 
 .navbar-nav .nav-link.active, .navbar-nav .show > .nav-link {
-  color: #457B9D; }
+  color: #457B9D;
+}
 
 /*Background del Nav y Header*/
 .navheaderback {
@@ -69,7 +81,8 @@ main section article img {
   height: 300px;
   background-image: url("../assets/backgrounds/seyfettin-dincturk-3hnVKdWveT4-unsplash.jpg");
   background-size: cover;
-  background-position: center -100px; }
+  background-position: center -100px;
+}
 
 /*BEM Header*/
 .contenedorHeader {
@@ -77,18 +90,21 @@ main section article img {
   background-color: rgba(0, 0, 0, 0.199);
   height: 120px;
   color: #F1FAEE;
-  text-shadow: 1px 1px black; }
+  text-shadow: 1px 1px black;
+}
 
 .contenedorHeader__titulo {
   text-align: center;
   text-transform: uppercase;
-  font-size: 3em; }
+  font-size: 3em;
+}
 
 .contenedorHeader__subtitulo {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 130%;
   text-align: center;
-  letter-spacing: 2px; }
+  letter-spacing: 2px;
+}
 
 /*Footer + íconos bootrstrap*/
 footer {
@@ -96,19 +112,35 @@ footer {
   height: 12rem;
   display: flex;
   justify-content: space-around;
-  align-items: center; }
+  align-items: center;
+}
+
+.footer-logo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #676869;
+  font-style: italic;
+  font-size: 16px;
+}
+
+.superhost {
+  color: #e95331;
+}
 
 .footer-header {
   font-size: 150%;
   letter-spacing: 1px;
   color: #FE6D73;
-  margin-top: 30px; }
+  margin-top: 30px;
+}
 
 .footer-iconos {
-  color: #656566;
+  color: #F1FAEE;
   list-style: none;
   display: flex;
-  justify-content: space-evenly; }
+  justify-content: space-evenly;
+}
 
 /*Estilos específicos*/
 /*Contenedor del Main en Index*/
@@ -118,17 +150,33 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+}
 
 /*Formulario Bootstrap*/
 .form-select {
-  color: #FE6D73; }
+  color: #FE6D73;
+}
+
+.form-control {
+  color: #FE6D73;
+}
+
+.form-control::-moz-placeholder {
+  color: #FE6D73;
+}
+
+.form-control:-ms-input-placeholder {
+  color: #FE6D73;
+}
 
 .form-control::placeholder {
-  color: #FE6D73; }
+  color: #FE6D73;
+}
 
 .form-text {
-  font-size: 0.7em; }
+  font-size: 0.7em;
+}
 
 /*Modificación animación bootstrap*/
 .btn-primary {
@@ -137,33 +185,39 @@ footer {
   --bs-btn-border-color:#A8DADC;
   --bs-btn-hover-color: #F1FAEE;
   --bs-btn-hover-bg: #457B9D;
-  --bs-btn-hover-border-color: #FE6D73; }
+  --bs-btn-hover-border-color: #FE6D73;
+}
 
 /*Grid Deptos*/
 .grid-deptosMadrid {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: repeat(3, 1fr);
-  gap: 50px; }
+  gap: 50px;
+}
 
 .grid-deptosBaires {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-  gap: 50px; }
+  gap: 50px;
+}
 
 .titulo-madrid {
-  margin-top: 20px; }
+  margin-top: 20px;
+}
 
 .titulo-baires {
-  margin-top: 10px; }
+  margin-top: 10px;
+}
 
 /*Caja img de Index y Pisos*/
 .cajadeptos {
   margin-bottom: 30px;
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+}
 
 /*Botón de imágenes de Index y Pisos*/
 .boton-img {
@@ -177,54 +231,67 @@ footer {
   font-weight: bold;
   background-image: linear-gradient(to left, #457B9D, #1D3557, #457B9D);
   text-decoration: none;
-  transition: 0.1s; }
-  .boton-img:hover {
-    background-image: linear-gradient(to left, #1D3557, #457B9D, #1D3557);
-    transform: translate(0, px);
-    box-shadow: 3px 5px 5px gray; }
+  transition: 0.1s;
+}
+.boton-img:hover {
+  background-image: linear-gradient(to left, #1D3557, #457B9D, #1D3557);
+  transform: translate(0, px);
+  box-shadow: 3px 5px 5px gray;
+}
 
 .boton-img a:hover {
-  color: #FE6D73; }
+  color: #FE6D73;
+}
 
 /*Efecto hover en img/mapa*/
 .contenedor-imagen div {
   transition: 1.5s;
-  backface-visibility: hidden; }
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
 
 .contenedor-imagen .frente {
   position: absolute;
-  transform: perspective(600px) rotateY(0deg); }
+  transform: perspective(600px) rotateY(0deg);
+}
 
 .contenedor-imagen .dorso {
-  transform: perspective(600px) rotateY(180deg); }
+  transform: perspective(600px) rotateY(180deg);
+}
 
 .contenedor-imagen:hover .frente {
-  transform: perspective(600px) rotateY(180deg); }
+  transform: perspective(600px) rotateY(180deg);
+}
 
 .contenedor-imagen:hover .dorso {
-  transform: perspective(600px) rotateY(360deg); }
+  transform: perspective(600px) rotateY(360deg);
+}
 
 /*Textos de img en Main Index y Pisos*/
 .font-destacados {
   font-size: 25px;
   letter-spacing: 1px;
   text-transform: uppercase;
-  margin: 10px 10px; }
+  margin: 10px 10px;
+}
 
 .font-destacados__detalle {
-  font-size: 18px; }
+  font-size: 18px;
+}
 
 .lista-detalle-deptos {
   font-size: 15px;
   margin-bottom: 10px;
   list-style-position: inside;
-  display: flex; }
+  display: flex;
+}
 
 /*Contenedor Main Servicios*/
-.contenedor-mainServicios, .contenedor-mainPisos, .contenedor-mainLive, .contenedor-mainContacto {
+.contenedor-mainServicios, .contenedor-mainContacto, .contenedor-mainLive, .contenedor-mainPisos {
   margin-top: 20px;
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+}
 
 /*BEM lista Servicios*/
 .contenedorlista1, .contenedorlista2 {
@@ -232,10 +299,12 @@ footer {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  flex-wrap: wrap; }
+  flex-wrap: wrap;
+}
 
 .contenedorlista2 {
-  flex-direction: row-reverse; }
+  flex-direction: row-reverse;
+}
 
 .contenedorlista__img {
   display: inline-block;
@@ -244,24 +313,28 @@ footer {
   margin-top: 10px;
   margin-bottom: 10px;
   border-radius: 10px;
-  box-shadow: 3px 5px 5px gray; }
+  box-shadow: 3px 5px 5px gray;
+}
 
 .contenedorlista__item {
   font-size: 25px;
   background-color: #F1FAEE;
-  margin: 20px; }
+  margin: 20px;
+}
 
 .contenedorlista__itemlista {
   margin-top: 2px;
   margin-bottom: 10px;
-  margin-left: 20px; }
+  margin-left: 20px;
+}
 
 .contenedorlista__itemsord {
   font-size: 20px;
   text-align: left;
   margin-top: 12px;
   background-color: #F1FAEE;
-  list-style-image: url("../assets/icons/Brisas_bullet.png"); }
+  list-style-image: url("../assets/icons/Brisas_bullet.png");
+}
 
 /*Botón Contacto Servicios - Nesting*/
 .contactserv {
@@ -276,37 +349,45 @@ footer {
   text-transform: uppercase;
   font-weight: bold;
   background-image: linear-gradient(to left, #457B9D, #1D3557, #457B9D);
-  transition: .5s;
-  overflow: hidden; }
-  .contactserv:hover {
-    background-image: linear-gradient(to left, #1D3557, #457B9D, #1D3557);
-    box-shadow: 3px 5px 5px gray; }
+  transition: 0.5s;
+  overflow: hidden;
+}
+.contactserv:hover {
+  background-image: linear-gradient(to left, #1D3557, #457B9D, #1D3557);
+  box-shadow: 3px 5px 5px gray;
+}
 
 .contactserv a:hover {
-  color: #A8DADC; }
+  color: #A8DADC;
+}
 
 .contactserv span {
   position: absolute;
   background: #FE6D73;
-  transition: .5s; }
+  transition: 0.5s;
+}
 
 .contactserv span:nth-child(1) {
   width: 100%;
   height: 2px;
   top: 0;
-  left: -100%; }
+  left: -100%;
+}
 
 .contactserv span:nth-child(2) {
   width: 100%;
   height: 2px;
   bottom: 0;
-  right: -100%; }
+  right: -100%;
+}
 
 .contactserv:hover span:nth-child(1) {
-  left: 0; }
+  left: 0;
+}
 
 .contactserv:hover span:nth-child(2) {
-  right: 0; }
+  right: 0;
+}
 
 /*Contenedor Main Servicios*/
 /*Flexbox Pisos en Venta*/
@@ -314,7 +395,8 @@ footer {
   margin: 40px;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around; }
+  justify-content: space-around;
+}
 
 .contenedor-hoverdeptos {
   position: relative;
@@ -325,12 +407,14 @@ footer {
   margin-left: 10px;
   border-radius: 5px;
   box-shadow: 3px 5px 5px gray;
-  overflow: hidden; }
+  overflow: hidden;
+}
 
 .hoverdeptos_img {
   margin-top: 0px;
   margin-right: 0px;
-  margin-left: 0px; }
+  margin-left: 0px;
+}
 
 .contenedor-hoverdeptos__overlay {
   position: absolute;
@@ -344,117 +428,149 @@ footer {
   justify-content: center;
   align-items: center;
   opacity: 0;
-  backdrop-filter: blur(2px);
-  transition: .5s; }
-  .contenedor-hoverdeptos__overlay:hover {
-    opacity: 1;
-    cursor: pointer; }
+  -webkit-backdrop-filter: blur(2px);
+          backdrop-filter: blur(2px);
+  transition: 0.5s;
+}
+.contenedor-hoverdeptos__overlay:hover {
+  opacity: 1;
+  cursor: pointer;
+}
 
 .contenedor-hoverdeptos__texto {
-  font-size: 40px; }
+  font-size: 40px;
+}
 
 /*Subtítulo Livecams*/
 #bajadaLive {
   margin: 20px;
   font-style: italic;
-  text-align: center; }
+  text-align: center;
+}
 
 .grid-contenedoresLive {
   margin: 50px;
   display: grid;
-  grid-template-areas: "madrid baires" "bannerhoriz bannerhoriz";
-  row-gap: 100px; }
+  grid-template-areas: "madrid baires" "bannerhoriz bannerhoriz";
+  row-gap: 100px;
+}
 
 .grid-madrid {
-  grid-area: madrid; }
+  grid-area: madrid;
+}
 
 .grid-baires {
-  grid-area: baires; }
+  grid-area: baires;
+}
 
 .grid-bannerHoriz {
   grid-area: bannerhoriz;
-  justify-self: center; }
+  justify-self: center;
+}
 
 .grid-bannerVertical {
-  display: none; }
+  display: none;
+}
 
 /*Caja Livecam*/
 .contenedorLive {
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+}
 
 .contenedorLive__titulo {
   margin-bottom: 20px;
   font-size: 30px;
-  font-family: 'Ubuntu', sans-serif;
-  text-transform: uppercase; }
+  font-family: "Ubuntu", sans-serif;
+  text-transform: uppercase;
+}
 
 .contenedorLive__iframe {
   width: 560px;
   height: 315px;
   border-radius: 20px;
-  box-shadow: 3px 5px 5px gray; }
+  box-shadow: 3px 5px 5px gray;
+}
 
 /*Contacto*/
 .box-contacto {
+  margin: 40px 50px 60px 50px;
   padding: 20px;
   background-image: url("../assets/backgrounds/buenos aires pm.jpg");
   background-size: cover;
   background-position: center;
   color: #F1FAEE;
   text-shadow: 1px 1.5px black;
-  border-radius: 10px; }
+  border-radius: 10px;
+}
+
+.labelname {
+  margin-right: 20px;
+}
 
 /*Correcciones fuente boostrap en Contacto*/
 button, input, optgroup, select, textarea {
-  font-size: 80%; }
+  font-size: 80%;
+}
 
 /*Corrección legend bootstrap en Contacto*/
 legend {
   float: none;
-  width: auto; }
+  width: auto;
+}
 
 .contenedor-fieldsetContacto {
-  padding: 30px; }
+  padding: 30px;
+}
 
 .nombreApellido {
-  display: flex; }
+  display: flex;
+}
 
 .movilEmail {
   display: flex;
-  margin-top: 25px; }
+  margin-top: 25px;
+}
 
 .sexo {
   display: flex;
   flex-direction: column;
-  margin-top: 25px; }
+  margin-top: 25px;
+}
 
 .opcionSexo {
   margin-top: 10px;
   width: 300px;
   display: flex;
-  justify-content: space-between; }
+  justify-content: space-between;
+}
 
 .motivo {
-  margin-top: 25px; }
+  margin-top: 25px;
+}
 
 .comentarios {
-  margin-top: 25px; }
+  margin-top: 25px;
+}
 
 .textareaComentario {
   width: 60%;
-  height: 200px; }
+  height: 200px;
+}
 
 .contenedorCheckbox {
-  margin: 25px; }
+  margin: 25px;
+}
 
 .checkbox {
-  font-size: 80%; }
+  font-size: 80%;
+}
 
 .botonesContacto {
   display: flex;
-  justify-content: space-around; }
+  justify-content: space-around;
+}
 
 .botoncontacto {
   width: 100px;
@@ -465,57 +581,247 @@ legend {
   background-color: rgba(0, 0, 0, 0.49);
   letter-spacing: 2px;
   border: solid thin #F1FAEE;
-  border-radius: 10px; }
-  .botoncontacto:hover {
-    background-color: #f1faee87;
-    color: #1D3557; }
+  border-radius: 10px;
+}
+.botoncontacto:hover {
+  background-color: rgba(241, 250, 238, 0.5294117647);
+  color: #1D3557;
+}
 
 /*Media queries*/
-@media only screen and (max-width: 576px) {
+@media only screen and (min-width: 320px) and (max-width: 576px) {
   /*Estilos generales*/
   .navheaderback {
-    height: 250px;
-    background-position: top; }
+    background-position: center;
+  }
   .contenedorHeader {
-    height: 85px; }
+    margin-top: 125px;
+    padding: 3%;
+  }
   .contenedorHeader__titulo {
-    font-size: 40px; }
+    font-size: 2rem;
+  }
+  .contenedorHeader__subtitulo {
+    font-size: 100%;
+  }
+  .titulo-paginas {
+    font-size: 28px;
+  }
+  footer div img {
+    width: 150px;
+  }
+  .footer-logo {
+    font-size: 12px;
+  }
+  .footer-header {
+    font-size: 100%;
+  }
+  footer div h4 {
+    font-size: 18px;
+  }
   /*Index*/
-  .flex-fieldset {
-    flex-direction: column; }
+  .contenedor-mainIndex {
+    margin-bottom: 60px;
+  }
   .flex-cajabuscador {
-    justify-content: space-around; }
+    justify-content: space-around;
+  }
+  input, button, select, optgroup, textarea {
+    margin: 2px;
+  }
   .grid-deptosMadrid {
     grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(6, 1fr); }
+    grid-template-rows: repeat(6, 1fr);
+  }
   .grid-deptosBaires {
     grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(4, 1fr); }
+    grid-template-rows: repeat(4, 1fr);
+  }
+  .titulo-madrid {
+    margin-top: 30px;
+  }
+  .cajadeptos {
+    margin-bottom: 0px;
+  }
+  main section article img {
+    width: 300px;
+    height: 200px;
+    margin-right: none;
+    margin-left: none;
+  }
+  .font-destacados {
+    font-size: 16px;
+    margin: none;
+  }
+  .font-destacados__detalle {
+    font-size: 11px;
+  }
+  .lista-detalle-deptos {
+    font-size: 13px;
+  }
+  .boton-img {
+    width: 300px;
+  }
   /*Servicios*/
+  .contenedorlista1, .contenedorlista2 {
+    margin: 20px;
+  }
+  .contenedorlista__img {
+    width: 300px;
+    height: 200px;
+  }
   .contenedorlista__item {
-    text-align: center; }
+    font-size: 20px;
+    text-align: center;
+  }
+  .contenedorlista__itemsord {
+    font-size: 14px;
+  }
+  .contactserv {
+    margin: 0px;
+  }
+  .contenedor-mainServicios, .contenedor-mainPisos, .contenedor-mainLive, .contenedor-mainContacto {
+    margin-bottom: 60px;
+  }
+  /*Pisos*/
+  .flex-pisosventa {
+    margin: 0px;
+  }
+  .contenedor-hoverdeptos {
+    width: 300px;
+    height: 200px;
+    margin-top: 40px;
+  }
   /*Livecam*/
+  #bajadaLive {
+    margin: 0px;
+    font-size: 18px;
+    margin-bottom: 40px;
+  }
   .grid-contenedoresLive {
-    grid-template-areas: "madrid" "baires" "bannervertical";
-    row-gap: 100px; }
+    margin: 0px;
+    grid-template-areas: "madrid" "baires" "bannervertical";
+    row-gap: 50px;
+  }
+  .contenedorLive__iframe {
+    width: 300px;
+    height: 240px;
+  }
   .grid-bannerVertical {
     display: block;
     grid-area: bannervertical;
-    justify-self: center; }
+    justify-self: center;
+  }
   .grid-bannerHoriz {
-    display: none; }
+    display: none;
+  }
+  /*Contacto*/
+  .box-contacto {
+    margin: 20px;
+    padding: 10px;
+    font-size: 14px;
+  }
+  .contenedor-fieldsetContacto {
+    padding: 5px;
+  }
+  .nombreApellido {
+    flex-direction: column;
+  }
+  .movilEmail {
+    flex-direction: column;
+  }
+  .sexo {
+    width: 220px;
+  }
+  .sexo h4 {
+    font-size: 16px;
+  }
+  .opcionSexo {
+    display: inline;
+  }
+  .motivo h4 {
+    font-size: 16px;
+  }
+  .comentarios h4 {
+    font-size: 16px;
+  }
+  .textareaComentario {
+    width: 100%;
+  }
+  .contenedorCheckbox {
+    font-size: 11px;
+    margin: 0px;
+  }
+  .botonesContacto {
+    flex-wrap: wrap;
+  }
+}
+@media only screen and (min-width: 576px) and (max-width: 1200px) {
+  /*Estilos generales*/
+  .navheaderback {
+    height: 250px;
+    background-position: top;
+  }
+  .contenedorHeader {
+    height: 100px;
+  }
+  .contenedorHeader__titulo {
+    font-size: 40px;
+  }
+  /*Index*/
+  .flex-fieldset {
+    flex-direction: column;
+  }
+  .flex-cajabuscador {
+    justify-content: space-around;
+  }
+  input, button, select, optgroup, textarea {
+    margin: 2px;
+  }
+  .grid-deptosMadrid {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+  }
+  .grid-deptosBaires {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+  }
+  /*Servicios*/
+  .contenedorlista__item {
+    text-align: center;
+  }
+  /*Livecam*/
+  .grid-contenedoresLive {
+    grid-template-areas: "madrid" "baires" "bannervertical";
+    row-gap: 100px;
+  }
+  .grid-bannerVertical {
+    display: block;
+    grid-area: bannervertical;
+    justify-self: center;
+  }
+  .grid-bannerHoriz {
+    display: none;
+  }
   .contenedorLive__iframe {
-    width: 480px; }
+    width: 480px;
+  }
   /*Contacto*/
   .contenedor-fieldsetContacto {
-    align-items: center; }
+    align-items: center;
+  }
   .nombreApellido {
-    flex-direction: column; }
+    flex-direction: column;
+  }
   .movilEmail {
-    flex-direction: column; }
+    flex-direction: column;
+  }
   .textareaComentario {
     width: 350px;
-    height: 200px; }
+    height: 200px;
+  }
   .contenedorCheckbox {
     font-size: 18px;
-    margin: 18px; } }
+    margin: 18px;
+  }
+}/*# sourceMappingURL=estilos.css.map */
