--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,6 +1,11 @@
-/*Paleta
-Rojo #FE6D73 Blanco #F1FAEE Celeste #A8DADC Azul #457B9D Azul oscuro #1D3557
-*/
+
+//Paleta
+$rojo: #FE6D73;
+$blanco: #F1FAEE;
+$celeste: #A8DADC;
+$azul: #457B9D;
+$azuloscuro: #1D3557;
+$gris: gray;
 
 //Colores botones
 $colorboton: linear-gradient(to left,#457B9D ,#1D3557,#457B9D);
@@ -23,12 +28,12 @@ body{
     font-size:20px;
     font-family:'Montserrat', sans-serif;
     color: rgba(0, 0, 0, 0.668);
-    background-color: #F1FAEE;
+    background-color: $blanco;
 } 
 
 a{
     text-decoration: none;
-    color: #F1FAEE;
+    color: $blanco;
 }
 
 p{
@@ -60,7 +65,7 @@ main section article img{
     margin-right: 10px;
     margin-left: 10px;
     border-radius:5px;
-    box-shadow:3px 5px 5px gray;
+    box-shadow:3px 5px 5px $gris;
 }
 
 /*Estilos Nav Bootstrap*/
@@ -70,17 +75,17 @@ main section article img{
 }
 
 .nav-link{
-    color:#457B9D;
+    color: $azul;
     text-transform:uppercase;
     font-size: 18px;
 }
 
 .nav-link:focus, .nav-link:hover{
-    color:#1D3557;
+    color: $azuloscuro;
 }
 
 .navbar-nav .nav-link.active, .navbar-nav .show > .nav-link{
-    color:#457B9D;
+    color: $azul;
 }
 
 
@@ -99,7 +104,7 @@ main section article img{
     margin-top: 120px;
     background-color:rgba(0, 0, 0, 0.199);;
     height:120px;
-    color:#F1FAEE;
+    color:$blanco;
     text-shadow: 1px 1px black;
 
 }
@@ -118,9 +123,10 @@ main section article img{
     letter-spacing: 2px;
 }
 
+
 /*Footer + íconos bootrstrap*/
 footer{
-    background-color: #1D3557;
+    background-color: $azuloscuro;
     height:12rem;
     display: flex;
     justify-content:space-around;
@@ -130,8 +136,8 @@ footer{
 //Maps
 $coloresfooter: (
     gris: #676869,
-    rojo: #e95331,
-    rosa: #FE6D73,
+    rojonar: #e95331,
+    rojo: #FE6D73,
     blanco: #F1FAEE,
 );
 
@@ -145,13 +151,13 @@ $coloresfooter: (
 }
 
 .superhost{
-    color: map-get($map: $coloresfooter, $key: rojo);
+    color: map-get($map: $coloresfooter, $key: rojonar);
 }
 
 .footer-header{
     font-size: 150%;
     letter-spacing: 1px; 
-    color: map-get($map: $coloresfooter, $key: rosa);  
+    color: map-get($map: $coloresfooter, $key: rojo);  
     margin-top: 30px;
     }
 
@@ -160,6 +166,11 @@ $coloresfooter: (
     list-style: none;
     display:flex;
     justify-content: space-evenly;
+}
+
+//Modificiación bootstrap de color hover iconos redes sociales
+:root{
+    --bs-link-hover-color: #676869;
 }
 
 
@@ -177,15 +188,15 @@ $coloresfooter: (
 
 /*Formulario Bootstrap*/
 .form-select{
-    color:#FE6D73;
+    color: $rojo;
 }
 
 .form-control{
-    color:#FE6D73;
+    color: $rojo;
 }
 
 .form-control::placeholder{
-    color:#FE6D73;
+    color:$rojo;
 }
 
 .form-text{
@@ -251,12 +262,12 @@ $coloresfooter: (
         &:hover{
             background-image: $colorbotonhover;
             transform:translate(0, px);
-            box-shadow:3px 5px 5px gray;
+            box-shadow:3px 5px 5px $gris;
         }
 }
 
 .boton-img a:hover{
-    color:#FE6D73; 
+    color: $rojo; 
 }
 
 /*Efecto hover en img/mapa*/
@@ -331,12 +342,12 @@ $coloresfooter: (
     margin-top: 10px; 
     margin-bottom: 10px;
     border-radius: 10px;
-    box-shadow:3px 5px 5px gray;
+    box-shadow:3px 5px 5px $gris;
 }
 
 .contenedorlista__item{
     font-size: 25px;
-    background-color: #F1FAEE;
+    background-color: $blanco;
     margin:20px;
 }
 
@@ -350,7 +361,7 @@ $coloresfooter: (
     font-size: 20px;
     text-align: left;
     margin-top: 12px;
-    background-color: #F1FAEE;  
+    background-color: $blanco;  
     list-style-image: url("../assets/icons/Brisas_bullet.png");  
 }
 
@@ -371,17 +382,17 @@ $coloresfooter: (
     overflow: hidden;
         &:hover{
             background-image: $colorbotonhover;
-            box-shadow: 3px 5px 5px gray;
+            box-shadow: 3px 5px 5px $gris;
         }
 }
 
 .contactserv a:hover{
-    color: #A8DADC;
+    color: $celeste;
 }
 
 .contactserv span{
     position: absolute;
-    background: #FE6D73;
+    background: $rojo;
     transition: .5s;
 }
 
@@ -429,7 +440,7 @@ $coloresfooter: (
     margin-right: 10px;
     margin-left: 10px;
     border-radius: 5px;
-    box-shadow: 3px 5px 5px gray;
+    box-shadow: 3px 5px 5px $gris;
     overflow: hidden;
 }
 
@@ -447,7 +458,7 @@ $coloresfooter: (
     top: 0;
     left: 0;
     background: rgba(0, 0, 0, 0.6);
-    color: #F1FAEE;
+    color: $blanco;
     display:flex;
     justify-content: center;
     align-items: center;
@@ -521,7 +532,7 @@ $coloresfooter: (
     width: 560px; 
     height: 315px;
     border-radius: 20px;
-    box-shadow: 3px 5px 5px gray;
+    box-shadow: 3px 5px 5px $gris;
 }
 
 /*Contacto*/
@@ -536,7 +547,7 @@ $coloresfooter: (
     background-image: url("../assets/backgrounds/buenos\ aires\ pm.jpg");
     background-size: cover;
     background-position: center;
-    color:#F1FAEE;
+    color: $blanco;
     text-shadow: 1px 1.5px black;
     border-radius: 10px;
 }
@@ -615,16 +626,51 @@ legend{
     padding: 5px;
     font-weight: bold;
     font-size: 14px;
-    color:#F1FAEE;
+    color: $blanco;
     background-color: rgba(0, 0, 0, 0.49);
     letter-spacing: 2px;
-    border: solid thin #F1FAEE;
+    border: solid thin $blanco;
     border-radius: 10px;
         &:hover{
             background-color: #f1faee87;
-            color: #1D3557;
+            color: $azuloscuro;
         }
 }
+
+//Página en construcción "soon"
+.navheaderbackSoon{
+    @include sizes(100%, 600px);
+    background-image: url("../assets/backgrounds/seyfettin-dincturk-3hnVKdWveT4-unsplash.jpg");
+    background-size:cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+.contenedorHeaderSoon{
+    height: 600px;
+    background-color:rgba(0, 0, 0, 0.736);
+    color: $blanco;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.contenedorHeaderSoon__titulo{
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 3em;
+    
+}
+
+.contenedorHeaderSoon__subtitulo{
+    font-family: 'Montserrat', sans-serif;
+    font-size:130%;
+    text-align: center;
+    letter-spacing: 2px;
+}
+
 
 
 /*Media queries*/
@@ -845,6 +891,9 @@ legend{
         flex-wrap: wrap;
     }
     
+    .contenedorHeaderSoon{
+        font-size: 11px;
+    }
 
 }
 
